2005-03-11  Andrew Johnson  <ajgenius@ajgenius.us>

	* engines/crux/src/config.h.in:
		re-empty crux config template (tsk's thos)

	(merging changes from smooth cvs)
	
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_rc.c:
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_rc.h:
	* engines/smooth/src/engine/smooth_gtk2_engine.c:
        * engines/smooth/src/utils/draw_arrows.c:
	* engines/smooth/src/utils/draw_arrows.h:

	ensure composite arrows immediately after parse i
	(to try and prevent memleaks on arrowless apps)
	
	* engines/smooth/src/interfaces/gdk2/src/gdk2_gradient_routines.c:
	* engines/smooth/src/interfaces/gdk2/src/gdk2_gradient_routines.h:

	enabled dither pixbuf gradients by default for vertical/horizontal
	gradients and use exponential memcpy's in block sizes of 2^n to
	optimize number of steps used to draw vertical gradient lines.
	
2005-03-07  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:

	Update for 2.6.2 release

2005-02-19  Andrew Johnson <ajgenius@ajgenius.us>
	* engines/smooth/src/engine/smooth_gtk2_drawing.c
	* engines/smooth/src/engine/smooth_gtk2_rc.c:
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_drawing.c:
	
	Sync with with latest smooth 0.6.0 fixes, closes bugs #167389 and
	#163370

2005-02-03  William Jon McCann  <mccann@jhu.edu>

	* engines/smooth/src/engine/smooth_gtk2_engine.h: 
	* engines/smooth/src/engine/smooth_gtk2_drawing.c (smooth_draw_flat_box): 
	* engines/smooth/src/engine/smooth_gtk2_engine.c (smooth_style_class_init):
	Namespace parent_class var (Fixes #166201).

2005-02-03  Kjartan Maraas  <kmaraas@gnome.org>

	* engines/smooth/src/engine/smooth_gtk2_engine.c:
	(smooth_rc_style_parse): Use g_quark_from_string() instead
	of g_quark_from_static_string() since the latter will cause
	problems when used in modules that are dynamically loaded
	and unloaded. This should solve a ton of crashes related
	to changing themes. Closes bug #165942, bug #166018,